# ln-address-server

./: .env.sample  .gitignore  .rustfmt.toml  Cargo.toml  Dockerfile  README.md  docker-compose.yml
src/: cli.rs  main.rs  phoenixd.rs
src/api/: api.rs  callback.rs  config.rs  error.rs  lnaddress.rs  mod.rs
src/nostr/: connection.rs  mod.rs  nostr_event.rs  zap_handler.rs
