[package]
name = "ln-address"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.13.5"
actix-cors = "0.7.0"
actix-web = "4.8.0"
clap = { version = "4.5.9", features = ["derive"] }
reqwest = "0.12.5"
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.120"
tokio = { version = "1.38.1", features = ["full"] }
