[package]
name = "ln-address"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.13.5"
actix-cors = "0.7.0"
actix-web = "4.8.0"
clap = { version = "4.5.9", features = ["derive"] }
futures-util = "0.3.30"
hex-conservative = "0.2.1"
reqwest = "0.12.5"
secp256k1 = { version = "0.29.0", features = ["serde"] }
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.120"
sha2 = "0.10.8"
tokio = { version = "1.38.1", features = ["full"] }
tokio-tungstenite = { version = "0.23.1", features = ["native-tls"] }
